Adding randomized images for articles. Since I added randomized images for articles, when you click on the article, it will have a random image for the single article as well. Not sure how to manage this.

--- a/src/styles/ArticleCss.css
+++ b/src/styles/ArticleCss.css
@@ -34,7 +34,14 @@
   background: #ffffff;
   margin-top: 60px;
   transform: scale(1);
+}
 
+.articleImage {
+  display: flex;
+  justify-content: center;
+  max-width: 500px;
+  max-height: 500px;
+  transform: scale(1);
 }
 
 .boxArticle {
